# acstools

./: .bandit.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  CHANGES.rst  CITATION.md  Jenkinsfile  JenkinsfileRT  LICENSE.txt  MANIFEST.in  README.rst  azure-pipelines.yml  conftest.py  defsetup.py  new_setup.cfg  pixelarea.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: build.yml  ci_workflows.yml  codeql-analysis.yml  open_actions.yml  predeps_workflows.yml  publish-to-pypi.yml
acstools/: ._acscteforwardmodel.py  PixCteCorr.py  __init__.py  _radon.pyx  acs2d.py  acs_destripe.py  acs_destripe_plus.py  acsccd.py  acscte.py  acscteforwardmodel.py  acsphotcte.py  acsrej.py  acssum.py  acstools.cfg  acszpt.py  calacs.py  findsat_mrt.py  focus_diverse_epsfs.py  helpers.py  pixelarea.py  polarization_tools.py  runastrodriz.py  satdet.py  setup_package.py  utils_calib.py  utils_findsat_mrt.py  utils_subarr.py
acstools/data/: polarizer_tables.yaml  rt_line_kernel_width1.fits  rt_line_kernel_width15.fits
acstools/kernels/: rt_line_kernel_width3.fits  rt_line_kernel_width7.fits
acstools/pars/: PixCteCorr.cfg  PixCteCorr.cfgspc  acs2d.cfgspc  acs_destripe.cfg  acs_destripe_plus.cfg  acs_destripe_plus.cfgspc  acsccd.cfg  acsccd.cfgspc  acscte.cfg  acscteforwardmodel.cfg  acscteforwardmodel.cfgspc  acsrej.cfg  acsrej.cfgspc  acssum.cfg  calacs.cfg  calacs.cfgspc  runastrodriz.cfg  runastrodriz.cfgspc
acstools/tests/: __init__.py  helpers.py  test_polarization.py  test_wfc_acs2d.py  test_wfc_acsccd.py  test_wfc_acscte.py  test_wfc_acsrej.py  test_wfc_acssum.py  test_wfc_asn1.py  test_wfc_destripe.py  test_wfc_findsat_mrt.py  test_wfc_satdet.py
acstools/tests/data/input/: ja0x03ojq_flt.fits  jb5g05ubq_flt.fits  jc2z03cvq_blv_tmp.fits  jc5001soq_flt.fits  jc8m10syq_flc.fits  jc8m32j5q_flc.fits  jc8o04ghq_flt.fits  jc8o04ghq_mask1.fits  jc8o04ghq_mask2.fits
acstools/tests/data/truth/: ja0x03ojq_flt_ref.fits  jb5g05ubq_flt_ref.fits  jc2z03cvq_blv_tmp_ref.fits  jc5001soq_flt_ref.fits  jc8m10syq_flc_ref.fits  jc8m32j5q_flc_catalog_ref.fits  jc8m32j5q_flc_mask_ref.fits  jc8o04ghq_flt_ref.fits
doc/: Makefile  make.bat  rtd-pip-requirements
doc/source/: acs2d.rst  acs_destripe.rst  acs_destripe_plus.rst  acsccd.rst  acscte.rst  acscteforwardmodel.rst  acsphotcte.rst  acsrej.rst  acssum.rst  acszpt.rst  calacs.rst  calacs_hstcal.rst  conf.py  findsat_mrt.rst  focus_diverse_epsfs.rst  index.rst  pixctecorr.rst  polarization_tools.rst  satdet.rst  utils_calib.rst  utils_findsat_mrt.rst  utils_subarr.rst
lib/: PixCteCorr.help  PixCteCorr.py  __init__.py  acs_destripe.help  acs_destripe.py  csc_kill  csc_kill.help  csc_kill.py  updatenpol.py
lib/acstools/: ImageOpByAmp.py  PixCteCorr.help  PixCteCorr.py  __init__.py  acs2d.py  acs_destripe  acs_destripe.help  acs_destripe.py  acs_destripe_plus.py  acsccd.py  acscte.py  acsrej.py  acssum.py  calacs.py  fitsdiff  fitsdiff.py  runastrodriz  runastrodriz.py  satdet.py  svn_version.py
lib/acstools/pars/: PixCteCorr.cfg  PixCteCorr.cfgspc  acs2d.cfg  acs2d.cfgspc  acs_destripe.cfg  acs_destripe.cfgspc  acs_destripe_plus.cfg  acs_destripe_plus.cfgspc  acsccd.cfg  acsccd.cfgspc  acscte.cfgspc  acsrej.cfg  acsrej.cfgspc  acssum.cfgspc  runastrodriz.cfg  runastrodriz.cfgspc
lib/pars/: PixCteCorr.cfg  PixCteCorr.cfgspc  acs_destripe.cfg  acs_destripe.cfgspc  csc_kill.cfg  csc_kill.cfgspc
scripts/: acs_destripe_plus
src/: FixYCte.c  PixCteCorr.h  PixCteCorr_funcs.c  PixCte_FixY.c  py_PixCteCorr.c
test/: test_calacs.py
