[metadata]
package_name = acstools
description = Python Tools for ACS (Advanced Camera for Surveys) Data
author = Matt Davis, Warren Hack, Norman Grogin, Pey Lian Lim, Sara Ogaz, Leornado Ubeda, Mihai Cara, David Borncamp, Jamie Noss
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/acstools
classifier =
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
acs_destripe = acstools.acs_destripe:main
acs_destripe_plus = acstools.acs_destripe_plus:main

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[flake8]
# Ignoring these for now:
# E262: inline comment should start with '#'
# E265: block comment should start with '#'
# E501: line too long
ignore = E262,E265,E501
