[metadata]
package_name = acstools
description = Python Tools for ACS (Advanced Camera for Surveys) Data
author = Matt Davis, Warren Hack, Norman Grogin, Pey Lian Lim, Sara Ogaz, Leornado Ubeda, Mihai Cara, David Borncamp, Nathan Miles
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/acstools
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[entry_points]
acs_destripe = acstools.acs_destripe:main
acs_destripe_plus = acstools.acs_destripe_plus:main

[tool:pytest]
minversion = 3.0
norecursedirs = build doc/build relic
junit_family=xunit2

[flake8]
# Ignoring these for now:
# E221: multiple spaces before operator
# E226: missing whitespace around arithmetic operator
# E262: inline comment should start with '# '
# E265: block comment should start with '#'
# E501: line too long
# E704: multiple statements on one line (def)
ignore = E221,E226,E262,E265,E501,E704
exclude = setup.py,__init__.py
