[metadata]
name = acstools
description = Python Tools for HST ACS
long_description = Python Tools for HST ACS (Advanced Camera for Surveys) Data
long_description_content_type = text/plain
keywords = astronomy, astrophysics, calibration
author = Matt Davis, Warren Hack, Norman Grogin, Pey Lian Lim, Sara Ogaz, Leonardo Ubeda, Mihai Cara, David Borncamp, Nathan Miles, Tyler Desjardins, Jenna Ryon, David Stark
author_email = help@stsci.edu
license = BSD
license_files = LICENSE.md
url = https://github.com/spacetelescope/acstools
edit_on_github = False
github_project = spacetelescope/acstools
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Reports = https://github.com/spacetelescope/acstools/issues/
    Source = https://github.com/spacetelescope/acstools/
    Help = https://hsthelp.stsci.edu

[options]
packages = find:
zip_safe = False
setup_requires=
    setuptools_scm
install_requires =
    numpy
    astropy>=3.1
    requests
    PyYAML
python_requires = >=3.8

[options.extras_require]
all =
    matplotlib
    scipy
    scikit-image
    stsci.tools
    stsci.imagestats
    photutils
test =
    pytest
    pytest-astropy-header
    pytest-remotedata
    ci-watson
docs =
    sphinx<7
    sphinx-automodapi
    sphinx-rtd-theme

[options.package_data]
acstools = data/*
acstools.tests =
    data/input/*.fits
    data/truth/*.fits

[options.entry_points]
console_scripts =
  acs_destripe = acstools.acs_destripe:main
  acs_destripe_plus = acstools.acs_destripe_plus:main

[tool:pytest]
minversion = 5
testpaths = "acstools" "doc"
norecursedirs = build doc/build
astropy_header = true
xfail_strict = true
filterwarnings =
  error
  ignore:numpy\.ndarray size changed:RuntimeWarning
  ignore:unclosed file:ResourceWarning
  ignore:distutils Version classes are deprecated:DeprecationWarning
  ignore:Deprecation Warning.*timeout.*parameter no longer needed:UserWarning
  # https://github.com/spacetelescope/crds/issues/922
  ignore:Deprecated call to.*pkg_resources\.declare_namespace.*:DeprecationWarning
  ignore:pkg_resources is deprecated as an API:DeprecationWarning
  # Python 3.12 warning from dateutil imported by matplotlib
  ignore:.*utcfromtimestamp:DeprecationWarning

[flake8]
# Ignoring these for now:
# E221: multiple spaces before operator
# E226: missing whitespace around arithmetic operator
# E262: inline comment should start with '# '
# E265: block comment should start with '#'
# E501: line too long
# E704: multiple statements on one line (def)
# W504: line break after binary operator
ignore = E221,E226,E262,E265,E501,E704,W504
